--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -17,5 +17,9 @@
 "SIDEBAR_TEXT": {
 	"header": "Who should come?",
 	"text": "<li>Anybody interested in art and the creative industry</li><li>Painters, sculptors, photographers and graphic artists</li><li>Those interested in meeting and making a connection with others in the local art scene.</li>"
+},
+"SCHOOL_LIST_TEXT": {
+	"header": "US Schools",
+	"text": "While you attend the conference, head over to our gallery where you can check out some of the work from our speakers."
 }
 }
