update schoollist.ejs i18n stuff

--- a/app/data/i18n/cn.json
+++ b/app/data/i18n/cn.json
@@ -19,7 +19,7 @@
 	"text": "<li>Anybody interested in art and the creative industry</li><li>Painters, sculptors, photographers and graphic artists</li><li>Those interested in meeting and making a connection with others in the local art scene.</li>"
 },
 "SCHOOL_LIST_TEXT": {
-	"header": "US Schools",
-	"text": "While you attend the conference, head over to our gallery where you can check out some of the work from our speakers."
+	"header": "美国的学校",
+	"text": "在您选择赴美学习之前，请务必阅读我们网站上的信息，并且了解越多关于美国生活和学习的知识，对您和您的家人在美国留学会有很大的帮助。"
 }
 }
