--- a/app/data/i18n/cn.json
+++ b/app/data/i18n/cn.json
@@ -4,8 +4,8 @@
 "SERVICES":"留学服务",
 "CASES":"成功案例",
 "MAIN_PAGE_TEXT": {
-	"PART1": {"header": "Who are we?",
-	          "text": "<p>The Roux Academy gets thousands of submissions every year for artists interesting in participating in the CAC exhibits, and selects approximately 200 distinct pieces of contemporary art for display in their collective exhibit. In addition, 12 individuals are honored as Featured Artists - each being granted his or her own exhibit hall to display entire collections or themed pieces.</p><p>Each Featured Artist has an opportunity to speak at one of our meetups and share his or her vision, perspective, and techniques with attendees on a more personal level than at our large conference. It is truly an honor to be a CAC Featured Artist and many past students artists who were featured at CAC have gone on to brilliant careers in art.</p>"
+	"PART1": {"header": "关于橡叶教育",
+	          "text": "<p>橡叶教育成总部坐落在美国东海岸景色秀丽的新泽西州，距离纽约市开车约30分钟，距离费城大概开车一个小时。2008年橡叶教育成立于伊利诺伊州恶霸那香槟市，多年来一直以培养精英中国留学生为己任，专注于精英式高端的留学服务。已经迎来并送走了一届又一届的学生。我们的学生分布于美国各地，很多已经定居美国，有很多已经返回中国并在很多重要的工作岗位中开始了自己的职业生涯。</p><p>橡叶教育帮助广大留学生提供高中留学服务，大学留学服务，大学转学服务及留学生课程补习业务。近年来我们和很多国内的教育机构联合举行小学生夏令营，冬令营北美游学服务，希望能让更多的还未出过留学的学生有机会提前看看国外的学习和生活，风光和人文文化。</p>"
 	         },
 	"PART2": {"header": "Get Busy!",
 	         "text": "<p>If you want to keep up with what's going on with the group, <a href='http://www.meetup.com/rouxmeet'>join our meetup group</a>, <a href='http://www.twitter.com/rouxmeet'>follow us on twitter</a>. If you're in FaceBook, you can also <a href='http://www.facebook.com/rouxmeet'>join our FaceBook group</a>.</p>"
