--- a/app/data/i18n/cn.json
+++ b/app/data/i18n/cn.json
@@ -1,8 +1,10 @@
 {
-"HOME_TITLE": "橡叶留学咨询", 
-"HOME": "首页",
-"SERVICES":"留学服务",
-"CASES":"成功案例",
+"NAV_MENU": {
+	"HOME_TITLE": "橡叶留学咨询", 
+	"HOME": "首页",
+	"SERVICES":"留学服务",
+	"CASES":"成功案例"
+},
 "MAIN_PAGE_TEXT": {
 	"PART1": {"header": "关于橡叶教育",
 	          "text": "<p>橡叶教育成总部坐落在美国东海岸景色秀丽的新泽西州，距离纽约市开车约三十分钟，距离费城大概开车一个小时。橡叶教育前身成立于2008年伊利诺伊州厄巴纳香槟市，多年来我们一直以培养精英中国留学生为己任，专注于精英式高端的留学服务。迎来了一批又一批的学生，又送走了一批又一批的学生。我们的学生目前于美国各地，很多已经定居美国，有很多已经返回中国并在很多重要的工作岗位中开始了自己的职业生涯。</p><p>橡叶教育帮助广大留学生提供高中留学服务，大学留学服务，大学转学服务及留学生课程补习业务。近年来我们和很多国内的教育机构联合举行小学生夏令营，冬令营北美游学服务，希望能让更多的还未出过留学的学生有机会提前看看国外的学习和生活，风光和人文文化。</p>"
