--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -1,8 +1,10 @@
 {
-"HOME_TITLE": "Oakleafage Education Consulting",
-"HOME": "Home",
-"SERVICES": "Study Abroad",
-"CASES": "Testimony",
+"NAV_MENU": {
+	"HOME_TITLE": "Oakleafage Education Consulting",
+	"HOME": "Home",
+	"SERVICES": "Study Abroad",
+	"CASES": "Testimony"
+},
 "MAIN_PAGE_TEXT": {
 	"PART1": {"header": "Who are we?",
 	          "text": "<p>The Roux Academy gets thousands of submissions every year for artists interesting in participating in the CAC exhibits, and selects approximately 200 distinct pieces of contemporary art for display in their collective exhibit. In addition, 12 individuals are honored as Featured Artists - each being granted his or her own exhibit hall to display entire collections or themed pieces.</p><p>Each Featured Artist has an opportunity to speak at one of our meetups and share his or her vision, perspective, and techniques with attendees on a more personal level than at our large conference. It is truly an honor to be a CAC Featured Artist and many past students artists who were featured at CAC have gone on to brilliant careers in art.</p>"
