--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -1,6 +1,6 @@
 {
 "NAV_MENU": {
-	"HOME_TITLE": "Oakleafage Education Consulting",
+	"HOME_TITLE": "Oakleafage Education",
 	"HOME": "Home",
 	"SERVICES": "Study Abroad",
 	"CASES": "Testimony"
