update Website information

--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -2,7 +2,7 @@
 "NAV_MENU": {
 	"HOME_TITLE": "Oakleafage Education",
 	"HOME": "Home",
-	"SERVICES": "Study Abroad",
+	"SERVICES": "Services",
 	"CASES": "Testimony"
 },
 "MAIN_PAGE_TEXT": {
