--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -49,24 +49,57 @@
   "success_msg": "Your information is successfully submitted"
   },
   
-  "university": {
-    "cu": {"image":"", "text":""},
-  	"princeton": {"image":"", "text":""},
-  	"nyc": {"image":"", "text":""},
-    "ucla": {"image":"", "text":""},
-    "ucsd": {"image":"", "text":""},
-    "ucsb": {"image":"", "text":""},
-    "iu": {"image":"", "text":""},
-    "isu": {"image":"", "text":""},
-    "ui": {"image":"", "text":""},
-    "uiuc": {"image":"", "text":""},
-    "umich":{"image":"", "text":""},
-    "msu":{"image":"", "text":""},
-    "uo":{"image":"", "text":""},
-    "cmu":{"image":"", "text":""},
-    "up":{"image":"", "text":""},
-    "upenn":{"image":"", "text":""},
-    "pitt":{"image":"", "text":""},
-    "ru":{"image":"", "text":""}
-  }
+  "university": [
+    	{"name":"cu", "text":""},
+  		{"name":"princeton", "text":""},
+  		{"name":"nyc", "text":""},
+    	{"name":"ucla", "text":""},
+    	{"name":"ucsd", "text":""},
+    	{"name":"ucsb", "text":""},
+    	{"name":"iu", "text":""},
+    	{"name":"isu", "text":""},
+    	{"name":"ui", "text":""},
+    	{"name":"uiuc", "text":""},
+    	{"name":"umich", "text":""},
+    	{"name":"msu", "text":""},
+    	{"name":"uo", "text":""},
+    	{"name":"cmu", "text":""},
+    	{"name":"up", "text":""},
+    	{"name":"upenn", "text":""},
+    	{"name":"pitt", "text":""},
+    	{"name":"ru", "text":""}
+  ],
+  
+   "sliderImage":[ 
+       { "name": "n1.png",
+         "description": "this is a demo"
+       },
+       { "name": "n2.png",
+         "description": "this is a demo"
+       },
+       { "name": "n3.png",
+         "description": "this is a demo"
+       },
+       { "name": "n4.png",
+         "description": "this is a demo"
+       },
+       { "name": "n5.png",
+         "description": "this is a demo"
+       },
+       { "name": "n6.png",
+         "description": "this is a demo"
+       },
+       { "name": "n7.png",
+         "description": "this is a demo"
+       },
+       { "name": "n8.png",
+         "description": "this is a demo"
+       },
+       { "name": "n9.png",
+         "description": "this is a demo"
+       },
+       { "name": "n10.png",
+         "description": "this is a demo"
+       }     
+     ]    
 }
