dropdown bar form verification

--- a/app/data/i18n/cn.json
+++ b/app/data/i18n/cn.json
@@ -48,7 +48,48 @@
   "submit": "提交",
   "success_msg": "信息提交成功"
   },
-  
+  "dropdown":[
+  	{
+    "title" : "高中留学",
+    "name": "美国高中留学咨询",
+    "shortname" : "highschool",
+    "summary" : "",
+    "description": "<p>橡叶留学的高中留学服务包括帮助中国小留学生来到美国的私立高中和初中学习，橡叶留学从2008年就开始招收国际高中留学生。我们拥有丰富的美国高中资源和多年的管理经验。我们可以根据每个小留学生自身不同的情况，在申请之前和申请学生的家长进行深度沟通，答疑并且提出我们的建议和意见。近年来在美国留学的小留学生越来越多，相应出现的问题也很多，这是很多家长都非常关心的问题。对于我们来说，学生在学习上的进步，身心健康成长，和人身安全都是我们非常关心的问题。根据我们常年的留学管理经验，我们可以很骄傲地告诉我们的家长，我们所有的学生都很顺利的完成了高中学业，而且全部进入了美国的名牌大学（前一百名）。我们的同学分散在美国各个地区的大学，他们从事的专业从计算机，数学，物理等理工专业，到语言学，营养学，会计，金融，建筑，音乐，美术等其他学科。很多同学甚至刚来的时候学习情况并不乐观，或者很多小留学生有心理问题，或者一些同学由于年纪小，孤独，具有很多个人问题，在我们的悉心培育下，大家都快乐的成长，认识了很多美国的朋友，一起快乐的学习。</p><p>我们的服务包括：<ul><li>申请美国的高中</li><li>联系寄宿家庭</li><li>寄宿家庭的管理</li><li>和家长定时沟通学生的学习情况和生活情况</li><li>K11,K12的学生，我们会为小留学生安排预约TOEFL和ACT的考试</li><li>我们会和学校沟通悉心的为学生量身定制适合他们自身情况的选课计划</li><li>为我们的学生制定大学升学计划，包括如何选择未来的大学及专业</li><li>和我们的合作高中密切合作，为学生升入美国名牌大学包装个人申请材料</li></ul></p> <p>高中留学适应的人群：初中在读生和高中在读生。</p>",
+    "image": []
+    },
+    {
+    "title" : "美国本科留学",
+    "name": "美国本科留学咨询",
+    "shortname" : "undergraduate",
+    "summary": "",
+    "description": "<p>橡叶留学的本科留学服务定位于高，精，尖的留学服务。我们所有的留学院校均是美国前几十名的大学。根据学生的情况，我们会根据学生的经济情况，学习情况，个人喜好，为我们的学生选择最合适的大学。我们的留学申请工作是基于我们多年申请经验的大数据。我们会为本科申请学生提供最优秀的专业选择咨询，让学生们学习到自己喜欢的专业。我们专注于很多专业的申请，包括理工科，例如计算机，数学，物理，化学； 工程专业，例如土木工程，建筑设计，园林设计；艺术类专业： 音乐，电影，传媒及美术。</p><p>橡叶留学本科留学服务的适宜人群: <ul><li>国内高三在读学生。</li><li>国内大专在读生</li><li>国内本科在读生</li></p>",
+    "image" : ["columbia.png" , "nyc.png" , "princeton.png", "ucla.png", "ucsd.png", "ucsb.png", "ui.png","isu.png","iu.png","uiuc.png","umich.png","msu.png", "uo.png","cmu.png","pitt.png","upenn.jpg","ru.jpg"]
+    },
+    {
+    "title" : "高中夏令营",
+    "name": "高中夏令营",
+    "shortname" : "summercamp",
+    "summary": "",
+    "description": "<p>橡叶留学夏令营活动适合于各个年龄层的学生，我们有中学生夏令营和大学生夏令营。夏令营活动主要能够使国内的学生感受到欧美的教育，享受一下游学的经历。在这过程我们会安排学生们参观美国的东海岸的著名城市和大学。例如，纽约市，华盛顿特区，学生们能够亲自参观曼哈顿，华尔街，自由女神，白宫及国会山。我们还会安排学生们参观美国顶级大学，例如哥伦比亚大学，普林斯顿大学，纽约大学， 罗格斯大学和宾夕法尼亚大学。</p><p>适宜申请人群：<ul><li>国内初中，高中在读生</li><li>国内大专，本科在读生</li></ul></p><p>夏令营游学项目： <ul><li>美国东部20日游学活动（纽约，新泽西，费城，华盛顿特区）</li><li>美国西部10日游学活动（硅谷，旧金山，洛杉矶）</li></ul></p>",
+    "image" : []
+    },
+    {
+    "title" : "在美转学咨询",
+    "name": "在美转学咨询",
+    "shortname" : "transfer",
+    "summary": "",
+    "description": "<p>橡叶留学在美转学服务是帮助广大已经在美国在读的留学生办理转学业务，这其中包括选择学校，选择专业，评估申请情况，评估申请材料，准备推荐信，准备个人陈述，网上申请等，能够帮助在已经美国留学的小留学生们找到一个更加理想的大学。</p> <div style='display:inline-block'><p>适宜申请人：<ul><li>美国社区大学在读生</li><li>美国本科在读生</li></p></div>",
+    "image" : []
+    },
+    {
+      "title" : "家庭教师",
+      "name": "Home Tutor",
+      "shortname" : "hometutor",
+      "summary": "",
+      "description": "<p>橡叶留学在美转学服务是帮助广大已经在美国在读的留学生办理转学业务，这其中包括选择学校，选择专业，评估申请情况，评估申请材料，准备推荐信，准备个人陈述，网上申请等，能够帮助在已经美国留学的小留学生们找到一个更加理想的大学。</p><p>适宜申请人：<ul><li>美国社区大学在读生</li><li>美国本科在读生</li></p>",
+      "image" : []
+      }
+  ], 
   "university": [
     	{"name":"cu", "text":""},
   		{"name":"princeton", "text":""},
