--- a/app/data/i18n/en.json
+++ b/app/data/i18n/en.json
@@ -89,26 +89,26 @@
     "image" : []
     }
    ],
-  "university": [
-    	{"name":"cu", "text":""},
-  		{"name":"princeton", "text":""},
-  		{"name":"nyc", "text":""},
-    	{"name":"ucla", "text":""},
-    	{"name":"ucsd", "text":""},
-    	{"name":"ucsb", "text":""},
-    	{"name":"iu", "text":""},
-    	{"name":"isu", "text":""},
-    	{"name":"ui", "text":""},
-    	{"name":"uiuc", "text":""},
-    	{"name":"umich", "text":""},
-    	{"name":"msu", "text":""},
-    	{"name":"uo", "text":""},
-    	{"name":"cmu", "text":""},
-    	{"name":"up", "text":""},
-    	{"name":"upenn", "text":""},
-    	{"name":"pitt", "text":""},
-    	{"name":"ru", "text":""}
-  ],
+   "university": [
+    {"name":"cu", "img":"columbia.png","text":"hello"},
+    {"name":"princeton", "img":"princeton.png","text":""},
+    {"name":"nyc", "img":"nyc.png","text":""},
+    {"name":"ucla","img":"ucla.png", "text":""},
+    {"name":"ucsd","img":"ucsd.png", "text":""},
+    {"name":"ucsb","img":"ucsb.png", "text":""},
+    {"name":"iu","img":"iu.png", "text":""},
+    {"name":"isu", "img":"isu.png","text":""},
+    {"name":"ui", "img":"ui.png","text":""},
+    {"name":"uiuc","img":"uiuc.png", "text":""},
+    {"name":"umich", "img":"umich.png","text":""},
+    {"name":"msu","img":"msu.png", "text":""},
+    {"name":"uo","img":"uo.png", "text":""},
+    {"name":"cmu","img":"cmu.png", "text":""},
+    {"name":"up", "img":"ru.jpg","text":""},
+    {"name":"upenn","img":"upenn.jpg", "text":""},
+    {"name":"pitt", "img":"pitt.png","text":""}
+],
+
   
    "sliderImage":[ 
        { "name": "n1.png",
