--- a/app/data/i18n/cn.json
+++ b/app/data/i18n/cn.json
@@ -91,9 +91,9 @@
       }
   ], 
   "university": [
-    	{"name":"cu", "img":"columbia.png","text":"你好"},
-  		{"name":"princeton", "img":"princeton.png","text":""},
-  		{"name":"nyc", "img":"nyc.png","text":""},
+    	{"name":"cu", "img":"columbia.png","text":"哥伦比亚大学（Columbia University in the City of New York），简称为哥大（Columbia）。哥伦比亚大学是一所位于美国纽约曼哈顿的世界著名私立研究型大学，于1754年根据英国国王乔治二世颁布的《国王宪章》而成立，最初名为国王学院，1896年正式更名为哥伦比亚大学（1784-1896为哥伦比亚学院）并迁到目前所在的晨边高地(Morningside Heights)校园，属于常春藤盟校 ,是美国大学协会创始成员。</p><p>哥大是美国历史最悠久的五所大学之一，截止2017年共有96位诺贝尔奖得主在哥大学习或工作过，居世界第三位  。哥大校园里还走出5位美国开国元勋，奥巴马、罗斯福等四位美国总统，和34位各国元首、首脑，10位美国最高法院大法官。哥伦比亚大学拥有世界一流的法学院、商学院、医学院、新闻学院等，其新闻学院颁发的普利策奖（Pulitzer Prize）是美国新闻界的最高荣誉。1767 年哥伦比亚大学授予了第一个医学博士学位, 这也是美国历史上第一个专业博士学位。哥伦比亚大学是美国重要的研究机构之一，是北美第一个实现原子核裂变－曼哈顿计划的诞生地。</p><p>哥大在2018年美国新闻与世界报道(US News & World Report) 颁布的美国大学排名中位列第5。2017年度，哥大位列ARWU世界大学学术排名世界第8, 2018usnews世界大学排名（US News）世界第8；2018《华尔街日报》/《泰晤士高等教育》美国大学排名第2。"},
+  		{"name":"princeton", "img":"princeton.png","text":"普林斯顿大学（Princeton University），简称普林斯顿（Princeton），是世界著名私立研究型大学，位于美国新泽西州的普林斯顿市，是八所常春藤盟校之一。学校于1746年在新泽西州伊丽莎白镇创立，是美国殖民时期第四所成立的高等教育学院，当时名为“新泽西学院”，1747年迁至新泽西州，1756年迁至风景优美的普林斯顿市（位于费城和纽约之间），并在1896年正式改名为“普林斯顿大学”。虽然其旧校名是“新泽西州学院”，但它与今天位于邻近的尤因镇（Ewing Township）的“新泽西州学院”没有任何关联。它最初是长老制的教育机构，但学校从没有跟任何宗教机构有直接的联系。</p><p>普林斯顿大学培养了2位美国总统、12位美国最高法院大法官和众多美国国会议员 。同时，普林斯顿大学与附近的普林斯顿高等研究院（IAS）共同构成了世界著名的理论研究中心，对基础数学、理论物理学、经济学等学科的发展影响深远 。截至2017年，共有43位诺贝尔奖获得者在普林斯顿大学工作或学习过，位列世界第13名 。另有10位世界计算机最高奖图灵奖得主（世界第六）和14位世界数学最高奖菲尔兹奖得主在普林斯顿工作或学习过（世界第四） 。</p><p>2017-2018年，普林斯顿大学在世界大学学术排名（ARWU）中位列世界第6,在泰晤士高等教育世界大学排名中位列世界第7,在usnews世界大学排名（US News）中位列世界第9,在QS世界大学排名中位列世界第11。另外，普林斯顿大学在2017-2018年US News美国大学本科排名中，蝉联全美大学第1"},
+  		{"name":"nyc", "img":"nyc.png","text":"纽约大学（New York University）简称“NYU”，是一所位于纽约的世界著名私立综合性研究型大学，成立于1831年。纽约大学由18个学院和研究所组成，已经成为全美国境内规模最大的私立非营利高等教育机构之一，同时也是美国唯一一座位于纽约心脏地带的私立名校</p><p>作为全美TOP30名校，纽约大学被列为25所新常春藤名校之一，同时也是美国大学协会（AAU）成员之一。截至2016年，该校共拥有36位诺贝尔奖得主（在全球高校中列第17位，居全美第11位）.超过30名普利策奖得主，30余名奥斯卡金像奖得主，19名美国科学院勋章得主，多名阿贝尔奖，艾美奖、托尼奖得主。在最新一期出版的2018USNEWS中，纽约大学全美综合排名第30位。2017CWUR 世界大学排名第22位，年度全球CEO母校排名第18位,全美著名校友总数排名第8位</p><p>纽约大学较为偏重人文及社会科学，研究生院享有极高声誉。属下的帝势艺术学院(Tisch School of the Arts）是全美最佳艺术学院之一；斯特恩商学院（Leonard N. Stern School of Business）是蜚声世界的著名商学院，金融等专业连续排名全美前三；柯朗数学科学研究所是美国排名第一的应用数学研究机构；沙克房地产研究所（Schack）是美国房地产业界著名的高水平研究机构，和世界金融地产界联系紧密，2017排名全美第四 。法学院为全美最好的6所法学院之一，这六所顶级法学院也被称为“T6”超级法学院。牙医学院享誉世界，2017泰晤士报世界大学排名第十，全美第二。"},
     	{"name":"ucla","img":"ucla.png", "text":""},
     	{"name":"ucsd","img":"ucsd.png", "text":""},
     	{"name":"ucsb","img":"ucsb.png", "text":""},
@@ -103,11 +103,11 @@
     	{"name":"uiuc","img":"uiuc.png", "text":""},
     	{"name":"umich", "img":"umich.png","text":""},
     	{"name":"msu","img":"msu.png", "text":""},
-    	{"name":"uo","img":"uo.png", "text":""},
-    	{"name":"cmu","img":"cmu.png", "text":""},
-    	{"name":"up", "img":"ru.jpg","text":""},
+    	{"name":"uo","img":"uo.png", "text":"俄勒冈大学（University of Oregon，简称UO），建立于1876年，是拥有百年历史的美国著名公立大学之一，是以培养本科生和从事科学研究为主的综合性大学，坐落在俄勒冈州的第二大城市尤金（Eugene），距俄勒冈州首府塞勒姆约1个多小时车程。"},
+    	{"name":"cmu","img":"cmu.png", "text":"美国卡耐基梅隆大学（Carnegie Mellon University），简称CMU，坐落在美国宾夕法尼亚州的匹兹堡(Pittsburgh)，是一所拥有13,600名在校学生和1,423名教职及科研人员的世界著名学府。该校拥有享誉全球的计算机学院和戏剧学院，其艺术学院，商学院，工程院以及公共管理学院等也都在全美名列前茅。"},
+    	{"name":"up", "img":"ru.jpg","text":"宾夕法尼亚大学（University of Pennsylvania ），简称宾大（UPenn），位于宾夕法尼亚州的费城，是一所全球顶尖的私立研究型大学，著名的八所常春藤盟校之一，北美顶尖大学学术联盟美国大学协会（Association of American Universities）的十四所创始成员校之一。宾大由本杰明·富兰克林创建于1740年，是美国第四古老的高等教育机构，也是美国第一所从事科学技术和人文教育的现代高等学校。"},
     	{"name":"upenn","img":"upenn.jpg", "text":""},
-    	{"name":"pitt", "img":"pitt.png","text":""}
+    	{"name":"pitt", "img":"pitt.png","text":"匹兹堡大学 （University of Pittsburgh），又称“匹大” （PITT），是位于美国东北部宾夕法尼亚州的一所公立研究型大学，美国著名高等学府。其成立于1787年，是美国最早的十所大学之一，其下属UPMC为全球顶尖医学院之一，在器官移植、神经外科学等领域均处于国际领先地位。其主校区位于宾夕法尼亚州第二大城市匹兹堡，各学院分布在奥克兰区（Oakland），地理位置十分优越。校训格言是“真理与美德（Veritas et Virtus）”，吉祥物是美洲豹（Panther）。匹兹堡大学世界排名2018最新排行第48名。"}
   ],
   
    "sliderImage":[ 
